--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -216,7 +216,7 @@
       button.disabled = true;
       
       try {
-        const response = await fetch('http://localhost:3001/api/subscribe', {
+        const response = await fetch('/api/subscribe', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
