--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -241,10 +241,13 @@
             text-align: center;
             backdrop-filter: blur(10px);
             font-size: 1.5rem;
+            width: 30rem;
+            max-width: 90vw;
+          `;
           `;
           successDiv.innerHTML = `
-            <h3 style="margin: 0 0 1rem 0; color: #a855f7;">Thank you!</h3>
-            <p style="margin: 0;">We'll notify you at <strong>${email}</strong> when we launch!</p>
+            <h3 style="margin: 0 0 1rem 0; color: black;">Thank you!</h3>
+            <p style="margin: 0;">We'll notify you at <strong>${email}</strong> when we launch.</p>
           `;
           
           document.body.appendChild(successDiv);
