--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -244,7 +244,6 @@
             width: 30rem;
             max-width: 90vw;
           `;
-          `;
           successDiv.innerHTML = `
             <h3 style="margin: 0 0 1rem 0; color: black;">Thank you!</h3>
             <p style="margin: 0;">We'll notify you at <strong>${email}</strong> when we launch.</p>
@@ -272,4 +271,5 @@
     });
   </script>
 
-</body></html>
+</body>
+</html>
