--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -216,7 +216,7 @@
       button.disabled = true;
       
       try {
-        const response = await fetch('http://localhost:3001/api/subscribe', {
+        const response = await fetch('/api/subscribe', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
@@ -241,10 +241,12 @@
             text-align: center;
             backdrop-filter: blur(10px);
             font-size: 1.5rem;
+            width: 30rem;
+            max-width: 90vw;
           `;
           successDiv.innerHTML = `
-            <h3 style="margin: 0 0 1rem 0; color: #a855f7;">Thank you!</h3>
-            <p style="margin: 0;">We'll notify you at <strong>${email}</strong> when we launch!</p>
+            <h3 style="margin: 0 0 1rem 0; color: black;">Thank you!</h3>
+            <p style="margin: 0;">We'll notify you at <strong>${email}</strong> when we launch.</p>
           `;
           
           document.body.appendChild(successDiv);
@@ -269,4 +271,5 @@
     });
   </script>
 
-</body></html>
+</body>
+</html>
