--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,6 +21,13 @@
       color: black;
       overflow: hidden;
       position: relative;
+      background: 
+        url('gradient3.svg'),
+        url('gradient2.svg'),
+        url('gradient1.svg');
+      background-position: center center, center center, center center;
+      background-repeat: no-repeat, no-repeat, no-repeat;
+      background-size: 100vw auto, 100vw auto, 100vw auto;
       background-color: #F6FAFD;
     }
     
@@ -71,7 +78,6 @@
       margin-bottom: 0.25rem;
       opacity: 0.8;
       text-align: left;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
     }
 
     .description {
@@ -79,7 +85,6 @@
       line-height: 1.6;
       margin-bottom: 2rem;
       opacity: 0.8;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
     }
 
     .description a {
@@ -103,13 +108,13 @@
       padding-left: 18px;
       padding-right: 18px;
       height: 60px;
-      border: 1px solid #7D8DA6;
+      border: 1px solid #4D586A;
       border-radius: 12px;
       font-size: 1.5rem;
       outline: none;
       pointer-events: auto;
       font-family: 'Instrument Serif', sans-serif;
-      background: #EDF0F5;
+      background: rgba(237, 240, 245, 0.5);
       color: black;
       backdrop-filter: blur(10px);
       transition: all 0.3s ease;
@@ -118,23 +123,23 @@
       box-sizing: border-box;
     }
     .notify-form input::placeholder {
-      color: #7D8DA6 !important;
+      color: rgba(0, 0, 0, 0.5) !important;
       opacity: 1;
       font-size: 1.5rem;
       line-height: 1;
     }
     .notify-form input::-webkit-input-placeholder {
-      color: #7D8DA6 !important;
+      color: rgba(0, 0, 0, 0.5) !important;
       opacity: 1;
       font-size: 1.5rem;
     }
     .notify-form input::-moz-placeholder {
-      color: #7D8DA6 !important;
+      color: rgba(0, 0, 0, 0.5) !important;
       opacity: 1;
       font-size: 1.5rem;
     }
     .notify-form input:-ms-input-placeholder {
-      color: #7D8DA6 !important;
+      color: rgba(0, 0, 0, 0.5) !important;
       opacity: 1;
       font-size: 1.5rem;
     }
@@ -158,7 +163,6 @@
       border: 1px solid #6F4967;
       border-radius: 12px;
       font-size: 1.5rem;
-      font-weight: bold;
       cursor: pointer;
       transition: all 0.3s ease;
       pointer-events: auto;
