--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -108,7 +108,7 @@
       padding-left: 18px;
       padding-right: 18px;
       height: 60px;
-      border: 1px solid #4D586A;
+      border: 1px solid black;
       border-radius: 12px;
       font-size: 1.5rem;
       outline: none;
@@ -160,7 +160,7 @@
       height: 60px;
       background: #FFD2F5;
       color: black;
-      border: 1px solid #6F4967;
+      border: 1px solid black;
       border-radius: 12px;
       font-size: 1.5rem;
       cursor: pointer;
