--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,8 @@
       overflow-x: hidden;
       width: 100%;
       max-width: 100vw;
+      max-height: 100vh;
+      overflow-y: hidden;
     }
     
     body {
@@ -216,7 +218,7 @@
       overflow-wrap: break-word;
     }
     .notify-form { 
-      flex-direction: column; 
+      /* flex-direction: column;  */
       align-items: stretch;
       gap: 0.75rem;
       text-align: left;
