--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -99,7 +99,8 @@
 
     .input-title {
       font-size: 1.5rem;
-      margin-bottom: 0.25rem;
+      margin-bottom: 0.5rem;
+      margin-left: 1.12rem;
       opacity: 0.8;
       text-align: left;
     }
@@ -238,7 +239,10 @@
       font-size: 1.25rem;
       padding: 14px 20px;
     }
-    .input-title { font-size: 1.25rem; }
+    .input-title { 
+      font-size: 1.25rem; 
+      margin-left: 0.75rem;
+    }
     .description { 
       font-size: 1.25rem;
       word-wrap: break-word;
