favicon & other things

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,34 +8,34 @@
   <title>Goodreads Wrapped - Your Reading Year, Wrapped</title>
   <meta name="title" content="Goodreads Wrapped - Your Reading Year, Wrapped">
   <meta name="description" content="Discover your personalized reading insights with Goodreads Wrapped. Get beautiful stats on your books read, favorite genres, reading habits, and more. Coming soon!">
-  <meta name="keywords" content="goodreads wrapped, reading stats, book statistics, goodreads analytics, reading year in review, book tracker, reading habits, goodreads insights">
+  <meta name="keywords" content="goodreads wrapped, reading stats, book statistics, goodreads analytics, reading year in review, book tracker, reading habits, goodreads insights, your year in books">
   <meta name="author" content="Angelina Wu">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://goodreads-wrapped.vercel.app/">
+  <link rel="canonical" href="https://goodreadswrapped.com/">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://goodreads-wrapped.vercel.app/">
+  <meta property="og:url" content="https://goodreadswrapped.com/">
   <meta property="og:title" content="Goodreads Wrapped - Your Reading Year, Wrapped">
   <meta property="og:description" content="Discover your personalized reading insights with Goodreads Wrapped. Get beautiful stats on your books read, favorite genres, reading habits, and more. Coming soon!">
-  <meta property="og:image" content="https://goodreads-wrapped.vercel.app/logo512.png">
+  <meta property="og:image" content="https://goodreadswrapped.com/GRW-LandingDemo.png">
   <meta property="og:site_name" content="Goodreads Wrapped">
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://goodreads-wrapped.vercel.app/">
+  <meta property="twitter:url" content="https://goodreadswrapped.com/">
   <meta property="twitter:title" content="Goodreads Wrapped - Your Reading Year, Wrapped">
   <meta property="twitter:description" content="Discover your personalized reading insights with Goodreads Wrapped. Get beautiful stats on your books read, favorite genres, reading habits, and more. Coming soon!">
-  <meta property="twitter:image" content="https://goodreads-wrapped.vercel.app/logo512.png">
+  <meta property="twitter:image" content="https://goodreadswrapped.com/GRW-LandingDemo.png">
   
   <!-- Theme Color -->
   <meta name="theme-color" content="#F6FAFD">
   <meta name="msapplication-TileColor" content="#F6FAFD">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="192x192" href="/logo192.png">
-  <link rel="apple-touch-icon" sizes="512x512" href="/logo512.png">
+  <link rel="icon" type="image/png" href="/GRW-Favicon.png">
+  <link rel="apple-touch-icon" href="/GRW-Favicon.png">
+  <link rel="shortcut icon" href="/GRW-Favicon.png">
   
   <!-- Preload Critical Assets -->
   <link rel="preload" as="image" href="/gradient1.svg">
@@ -54,7 +54,7 @@
     "@type": "WebApplication",
     "name": "Goodreads Wrapped",
     "description": "Discover your personalized reading insights with Goodreads Wrapped. Get beautiful stats on your books read, favorite genres, reading habits, and more.",
-    "url": "https://goodreads-wrapped.vercel.app/",
+    "url": "https://goodreadswrapped.com/",
     "applicationCategory": "LifestyleApplication",
     "offers": {
       "@type": "Offer",
@@ -65,7 +65,8 @@
       "@type": "Person",
       "name": "Angelina Wu",
       "url": "https://angelinawwu.com"
-    }
+    },
+    "image": "https://goodreadswrapped.com/GRW-LandingDemo.png"
   }
   </script>
   <style>
